--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,6 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResetPasswordActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".ResetPasswordActivity"
+    android:background="@drawable/background"/>
