--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -154,18 +154,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="20dp"
         android:shadowColor="#88000000"
-        android:shadowDx="15"
-        android:shadowDy="10"
-        android:shadowRadius="5"
         android:text="@string/text_registraccount"
         android:textColor="#80FFFFFF"
-        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.914"
+        app:layout_constraintVertical_bias="0.936"
         tools:ignore="TextSizeCheck,TextContrastCheck" />
 
     <TextView
@@ -207,5 +203,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.092"
         tools:ignore="TextSizeCheck" />
+
+    <TextView
+        android:id="@+id/registrationLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_prefix_login"
+        android:textColor="#FFFDFD"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registrationButtonCreate"
+        app:layout_constraintVertical_bias="0.097" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
